--- a/HoneyOnlineStore.csproj
+++ b/HoneyOnlineStore.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="wwwroot\images\product\" />
+    <Folder Include="Orders\" />
   </ItemGroup>
 
 </Project>
