--- a/HoneyMarket.Common/HoneyMarket.Common.csproj
+++ b/HoneyMarket.Common/HoneyMarket.Common.csproj
@@ -24,4 +24,9 @@
     <Folder Include="Orders\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\HoneyMarket.Utility\HoneyMarket.Utility.csproj" />
+    <ProjectReference Include="..\HoneyMarket.Utility\HoneyMarket.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
