pull models into separate library

--- a/HoneyMarket.Common/HoneyMarket.Common.csproj
+++ b/HoneyMarket.Common/HoneyMarket.Common.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HoneyMarket.Models\HoneyMarket.Models.csproj" />
     <ProjectReference Include="..\HoneyMarket.Utility\HoneyMarket.Utility.csproj" />
   </ItemGroup>
 
